# TF2_MATCHES_DBT_DWH

./: dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
.github/: test.yml  test_conventions.yml
.github/workflows/: test.yml  test_conventions.yml
macros/: generate_audit_metadata.sql  tf2_utils.sql  timestamp_to_sk.sql
macros/audit/: dbt_logging_model_level_end.sql  dbt_logging_model_level_failed.sql  dbt_logging_model_level_start.sql  dbt_logging_run_level_end.sql  dbt_logging_run_level_start.sql
macros/audit/my_audit/: dbt_logging_tf_model_start.sql  dbt_logging_tf_run_end.sql  dbt_logging_tf_run_start.sql
models/core/incremental/: match.sql  match.yml
models/core/v_stg/: v_stg_map.sql  v_stg_map.yml  v_stg_match.sql  v_stg_match.yml  v_stg_player.sql  v_stg_player.yml
models/mart/: class_match_bridge.yml
models/mart/aggregates/: montgly_performance.yml  monthly_performance.sql  monthly_performance.yml  monthly_performance_v1.sql  monthly_performance_v2.sql
models/mart/bridge/: class_match_bridge.sql  dim_class_set.sql  dim_class_set.yml
models/mart/dim/: dim_date.sql  dim_date.yml  dim_map.sql  dim_map.yml  dim_player.sql  (+1 more)
models/stage/: sources.yml  stg_map.sql  stg_map.yml  stg_match.sql  stg_match.yml  stg_player.sql  stg_player.yml
models/testing/: bad_table.sql  good_table.sql  tester_1.sql
seeds/: class_data.csv
seeds/class_data/: properties.yml
snapshots/: snapshots.yml
state/: manifest.json
tests/: conftest.py  test_1.py  test_2.py
tests/generic/: is_between.sql
tests_sql/generic/: preceding_date.sql
(+3 files in other folders)
